[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "assDialogueMerger"
version = "0.1"
authors = [
  { name="royvds" },
]
description = "Merges the dialogue of one subtitle into the timings of another, similar subtitle"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0 license",
    "Operating System :: OS Independent",
]

[project.scripts]
assDialogueMerger = "assdialoguemerger.cli:main"

[project.urls]
"Homepage" = "https://github.com/royvds/assDialogueMerger/"
"Bug Tracker" = "https://github.com/royvds/assDialogueMerger/issues"
